--- a/.vromerc
+++ b/.vromerc
@@ -1,4 +1,4 @@
-set disablesites=www.google.com/reader/view
+set disablesites=www.google.com/reader/view,docs.google.com/spreadsheet
 set searchengines+={"wp":"http://en.wikipedia.org/wiki/{{keyword}}"}
 map R <C-r>
 map <M-R> R
