Update search engines and disabled sites.

--- a/.vromerc
+++ b/.vromerc
@@ -1,5 +1,7 @@
-set disablesites=www.google.com/reader/view,docs.google.com/spreadsheet
-set searchengines+={"wp":"http://en.wikipedia.org/wiki/{{keyword}}"}
+" NOTE you must separate sites with ", " not a simple "," (no quotes).
+set disablesites=www.google.com/reader/view, docs.google.com/spreadsheet
+
+set searchengines+={"wp":"http://en.wikipedia.org/wiki/{{keyword}}","discogs":"http://discogs.com/search?q={{keyword}}","gh":"http://github.com/search?q={{keyword}}","gcache":"http://webcache.googleusercontent.com/search?q=cache:{{keyword}}","image":"http://www.google.com/search?hl=en&tbm=isch&q={{keyword}}","rd":"http://wwww.ruby-doc.org/q/{{keyword}}"}
 
 map R <C-r>
 map <M-R> R
